<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="story">Story</string>
    <string name="home">Home</string>
    <string name="imageprofile">imageProfile</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="username">username</string>
    <string name="datecreated">Date Created</string>
    <string name="error_email">Harap Masukkan Email Yang Valid</string>
    <string name="title_story">Judul Cerita</string>
    <string name="description_story">Deskripsi Cerita</string>
    <string name="description">Deskripsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="settings_fragment">Settings</string>
    <string name="photo_preview">Photo Preview</string>
    <string name="error_size">Password Should Have 8 Character or More</string>
    <string name="failed_upload"><![CDATA[Upload Gagal, Harap Upload Gambar & Berikan Deskripsi]]></string>
    <string name="success_upload">Story Berhasil Di Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelilite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="error_maps">Failed Get Maps Location</string>
    <string name="retry">try again</string>

</resources>